styled all the buttons

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -22,3 +22,10 @@
     padding:12px;
     font-weight:500;
 }
+
+.button--link{
+    background: none;
+    border: none;
+    padding: 0;
+    color:$off-white;
+}
